Fixed hex item alignment

--- a/app/neko/assets/css/neko.scss
+++ b/app/neko/assets/css/neko.scss
@@ -310,7 +310,7 @@ section {
 }
 
 .cute-border {
-  border: 2px dashed #ff9fc6;
+  /* border: 2px dashed #ff9fc6; */
   border-radius: 30px;
   margin: 40px 45px 0;
   padding: 20px 40px;
@@ -327,16 +327,24 @@ section {
   flex-wrap: wrap;
   width: calc(var(--hex-size) * 3 + var(--hex-gap) * 4);
   margin: 0 auto;
-}
+  margin-left: 25px;
 
-.hex-item {
-  width: var(--s);
-  margin: var(--m);
-  height: calc(var(--s)*1.1547);
-  display: inline-block;
-  font-size:initial;
-  clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
-  background: red;
-  margin-bottom: calc(var(--m) - var(--s)*0.2885);
-  width:120px;
+  .hex-item {
+    margin: 3px;
+    height: calc(var(--s)*1.1547);
+    display: inline-block;
+    font-size:initial;
+    clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
+    background: red;
+    margin-bottom: calc(var(--m) - var(--s)*0.2885);
+    width:160px;
+  }
+
+  .row {
+    height: calc((var(--hex-size) / 2) + 80px);
+
+    &:nth-child(2n) {
+      margin-left: calc(calc(var(--hex-size) / 2 + var(--hex-gap) / 2) * -1);
+    }
+  }
 }
